--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,20 @@
+[build-system]
+requires = ["setuptools>=61.0.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "nzl"
 version = "0.0.0"
-authors = [
-  { name="Juan Arrieta", email="juan.arrieta@nablazerolabs.com" },
-]
-description = "Nabla Zero Labs Open Source Software",
+description = "Nabla Zero Labs Open Source Software"
 readme = "README.md"
-requires-python = ">=3.8"
+authors = [{name="Juan Arrieta", email="juan.arrieta@nablazerolabs.com" }]
+requires-python = ">=3.9"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
+keywords = ["astrodynamics"]
 
 [project.urls]
 Homepage = "https://github.com/NablaZeroLabs/nzl"
